improve color and font size in styles.